SERVER-31531 featureCompatibilityVersion writes must check for writeErrors

(cherry picked from commit ddacafb22591d831f2b320b196c2809193a52d05)