src/mongo/rpc/get_status_from_command_result.cpp
@@ -30,6 +30,7 @@
 
 #include "mongo/rpc/get_status_from_command_result.h"
 
+#include "mongo/base/error_codes.h"
 #include "mongo/base/status.h"
 #include "mongo/bson/util/bson_extract.h"
 #include "mongo/db/jsobj.h"
@@ -40,6 +41,7 @@ namespace mongo {
 
 namespace {
 const std::string kCmdResponseWriteConcernField = "writeConcernError";
+const std::string kCmdResponseWriteErrorsField = "writeErrors";
 }  // namespace
 
 Status getStatusFromCommandResult(const BSONObj& result) {
@@ -105,6 +107,47 @@ Status getWriteConcernStatusFromCommandResult(const BSONObj& obj) {
                                     << wcErrorInvalidMsg);
     }
     return wcError.toStatus();
+}
+
+Status getFirstWriteErrorStatusFromCommandResult(const BSONObj& cmdResponse) {
+    BSONElement writeErrorElem;
+    auto status = bsonExtractTypedField(
+        cmdResponse, kCmdResponseWriteErrorsField, BSONType::Array, &writeErrorElem);
+    if (!status.isOK()) {
+        if (status == ErrorCodes::NoSuchKey) {
+            return Status::OK();
+        } else {
+            return status;
+        }
+    }
+
+    auto firstWriteErrorElem = writeErrorElem.Obj().firstElement();
+    if (!firstWriteErrorElem) {
+        return Status::OK();
+    }
+
+    if (firstWriteErrorElem.type() != BSONType::Object) {
+        return Status(ErrorCodes::UnsupportedFormat,
+                      str::stream() << "writeErrors should be an array of objects, found "
+                                    << typeName(firstWriteErrorElem.type()));
+    }
+
+    auto firstWriteErrorObj = firstWriteErrorElem.Obj();
+
+    return Status(ErrorCodes::fromInt(firstWriteErrorObj["code"].Int()),
+                  firstWriteErrorObj["errmsg"].String());
+}
+
+Status getStatusFromWriteCommandReply(const BSONObj& cmdResponse) {
+    auto status = getStatusFromCommandResult(cmdResponse);
+    if (!status.isOK()) {
+        return status;
+    }
+    status = getFirstWriteErrorStatusFromCommandResult(cmdResponse);
+    if (!status.isOK()) {
+        return status;
+    }
+    return getWriteConcernStatusFromCommandResult(cmdResponse);
 }
 
 }  // namespace mongo
