src/mongo/rpc/get_status_from_command_result.h
@@ -51,4 +51,17 @@ Status getStatusFromCommandResult(const BSONObj& result);
  */
 Status getWriteConcernStatusFromCommandResult(const BSONObj& cmdResponse);
 
+
+/**
+ * Extracts the first write error from a command response and converts it into a status. This
+ * ignores all errors after the first and does not preserve the write error index, so it should not
+ * be used with bulk writes.
+ */
+Status getFirstWriteErrorStatusFromCommandResult(const BSONObj& cmdResponse);
+
+/**
+ * Extracts any type of error from a write command response.
+ */
+Status getStatusFromWriteCommandReply(const BSONObj& cmdResponse);
+
 }  // namespace mongo
