jstests/multiVersion/set_feature_compatibility_version.js
@@ -54,6 +54,23 @@
     // featureCompatibilityVersion cannot be set via setParameter.
     assert.commandFailed(adminDB.runCommand({setParameter: 1, featureCompatibilityVersion: "3.2"}));
 
+    // setFeatureCompatibilityVersion fails to downgrade to FCV=3.2 if the write fails.
+    assert.commandWorked(adminDB.runCommand({
+        configureFailPoint: "failCollectionUpdates",
+        data: {collectionNS: "admin.system.version"},
+        mode: "alwaysOn"
+    }));
+    assert.commandFailed(adminDB.runCommand({setFeatureCompatibilityVersion: "3.2"}));
+    res = adminDB.runCommand({getParameter: 1, featureCompatibilityVersion: 1});
+    assert.commandWorked(res);
+    assert.eq(res.featureCompatibilityVersion, "3.4");
+    assert.eq(adminDB.system.version.findOne({_id: "featureCompatibilityVersion"}).version, "3.4");
+    assert.commandWorked(adminDB.runCommand({
+        configureFailPoint: "failCollectionUpdates",
+        data: {collectionNS: "admin.system.version"},
+        mode: "off"
+    }));
+
     // featureCompatibilityVersion can be set to 3.2.
     assert.commandWorked(adminDB.runCommand({setFeatureCompatibilityVersion: "3.2"}));
     res = adminDB.runCommand({getParameter: 1, featureCompatibilityVersion: 1});
@@ -69,6 +86,23 @@
               spec,
               "Expected index with name 'incompatible_with_version_32' to have been removed: " +
                   tojson(allIndexes));
+
+    // setFeatureCompatibilityVersion fails to upgrade to FCV=3.4 if the write fails.
+    assert.commandWorked(adminDB.runCommand({
+        configureFailPoint: "failCollectionUpdates",
+        data: {collectionNS: "admin.system.version"},
+        mode: "alwaysOn"
+    }));
+    assert.commandFailed(adminDB.runCommand({setFeatureCompatibilityVersion: "3.4"}));
+    res = adminDB.runCommand({getParameter: 1, featureCompatibilityVersion: 1});
+    assert.commandWorked(res);
+    assert.eq(res.featureCompatibilityVersion, "3.2");
+    assert.eq(adminDB.system.version.findOne({_id: "featureCompatibilityVersion"}).version, "3.2");
+    assert.commandWorked(adminDB.runCommand({
+        configureFailPoint: "failCollectionUpdates",
+        data: {collectionNS: "admin.system.version"},
+        mode: "off"
+    }));
 
     // featureCompatibilityVersion can be set to 3.4.
     assert.commandWorked(adminDB.runCommand({setFeatureCompatibilityVersion: "3.4"}));
